--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622233340-->
+<!--timestamp=1622236612-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <title>Is MariaDB 10.6 Released?</title>
   <link rel="icon" href="https://released.info/assets/img/technologies/mariadb/mariadb.ico" type="image/svg+xml">
   <meta name="description" content="Is MariaDB 10.6 Released?">
-  <meta name="keywords">
+  <meta name="keywords"  content="MariaDB, DB, database, sql">
   <meta name=”robots” content="index, follow">
 
   <!-- facebook -->
@@ -78,7 +78,7 @@
         </div>
       </div>
       <span>
-        <h3>MariaDB 10.6 got status 'Alpha' on 2021-04-26</h3>
+        <h3>MariaDB 10.6 got status 'Alpha' on 26th April 2021</h3>
       </span>
       <span>
         <h4>There is no information when it will be released.</h4>
@@ -146,7 +146,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Getting-Started-with-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Getting-Started-MariaDB-Daniel-Bartholomew-ebook/dp/B00YSILK8Q">
+                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew/dp/1785284126">
                   <span>
                     Getting Started with MariaDB
                   </span>
@@ -160,7 +160,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Crash-Course.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/MariaDB-Crash-Course-_1-ebook/dp/B005JS2PDS">
+                <a target="_blank" href="https://www.amazon.de/-/en/Ben-Forta/dp/0321799941">
                   <span>
                     MariaDB Crash Course
                   </span>
@@ -174,7 +174,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Learning-MySQL-and-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Learning-MySQL-MariaDB-Heading-Direction-ebook/dp/B00VDHRFJI">
+                <a target="_blank" href="https://www.amazon.de/-/en/Russell-J-T-Dyer/dp/1449362907">
                   <span>
                     Learning MySQL and MariaDB
                   </span>
@@ -188,7 +188,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Essentials.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/MariaDB-Essentials-Emilien-Kenler/dp/1783982861">
+                <a target="_blank" href="https://www.amazon.de/-/en/Emilien-Kenler/dp/1783982861">
                   <span>
                     MariaDB Essentials
                   </span>
@@ -202,7 +202,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Mastering-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Mastering-MariaDB-Federico-Razzoli-ebook/dp/B00NW474Y6">
+                <a target="_blank" href="https://www.amazon.de/-/en/Federico-Razzoli-ebook/dp/B00NW474Y6">
                   <span>
                     Mastering MariaDB
                   </span>
@@ -216,7 +216,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Cookbook.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/MariaDB-Cookbook-Daniel-Bartholomew-ebook/dp/B00J5KHL80">
+                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew-ebook/dp/B00J5KHL80">
                   <span>
                     MariaDB Cookbook
                   </span>
