--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622321370-->
+<!--timestamp=1622321905-->
 
 <head>
   <meta charset="UTF-8">
@@ -258,8 +258,34 @@
 
     <section class="about-section">
   <div class="container-lg">
-    <h2>About</h2>
-
+    <h2>About MariaDB</h2>
+    MariaDB is developed by Michael Widenius, the same developer of MySQL, the first release was made available to the public
+    in October 2009. Maria DB is an authorized fork of MySQL, which stands for “structured query language”.
+    The applications for MySQL are similar to MariaDB, with of course some differences that will become apparent
+    as you continue to read this article. Essentially, what Maria DB is, is a relational database management system (RDBMS).
+    It is mostly used for data warehousing, data management, and even some applications in data analysis
+    and data science for those who find it useful in their context to have this possibility.<br />
+    <br />
+    The specific functionalities of Maria DB will likely make you see why a lot of people utilize it,
+    including big companies like Red Hat, Deutsche Bank, and even Nasdaq. First, Maria Db offers support for PHP,
+    which is one of the most popular back-end programming languages, which is very often linked with HTML,
+    a front-end one. With this in mind, MariaDB serves a purpose in web development and fits seamlessly in the toolkit
+    of a developer looking to store website data. MariaDB is comparatively smoother than MySQL, which means
+    that some people prefer it when expecting to work with larger and more demanding data sets or processes
+    for a given database. <br />
+    <br />
+    MariaDB has some interesting uses besides web development, for example, it hosts the MariaDB platform for analytics,
+    which claims to make modern analytics easy, and makes a very fine argument on how it does that.
+    First, it is infinitely easier to install than other platforms of this quality, and it queries data faster
+    than many platforms, sometimes up to twice the speed. Running queries on data can give great ideas on
+    key performance indicators, give a good sense of what to present for a business meeting, or simply
+    extract interesting patterns from a group of ordered data. This toolkit appeals to data analysts who
+    are more academic, as well as business data analytic people who look to extract insights from large datasets.<br />
+    <h3>Releases</h3>
+    Maria DB is currently on the 10.5 stable release, released in June of 2020. This version will cease
+    to be supported until 2025, with the 5-year pattern following for every year’s new release of MariaDB.
+    This is, of course, a very active community of developers and users to make plausible yearly
+    updates that add features and solve bugs in the manner that MariaDB does.
   </div>
 </section>
 
