--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622370720-->
+<!--timestamp=1622372473-->
 
 <head>
   <meta charset="UTF-8">
@@ -112,7 +112,7 @@
           Meet Maria 10.6
         </h2>
         <div class="row mb-5">
-          <div class="col-md-6">
+          <div class="col-md-5">
 
             <ul>
               <li>
@@ -133,7 +133,7 @@
             </ul>
 
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <ul>
               <li>
                 Engine transaction recovery through persistent binlog
@@ -261,7 +261,8 @@
     </section>
 
     <section class="about-section">
-  <div class="container-lg">
+      <div class="container-lg">
+        <div>
     <h2>About MariaDB</h2>
     MariaDB is developed by Michael Widenius, the same developer of MySQL, the first release was made available to the public
     in October 2009. Maria DB is an authorized fork of MySQL, which stands for “structured query language”.
@@ -290,8 +291,9 @@
     to be supported until 2025, with the 5-year pattern following for every year’s new release of MariaDB.
     This is, of course, a very active community of developers and users to make plausible yearly
     updates that add features and solve bugs in the manner that MariaDB does.
-  </div>
-</section>
+</div>
+      </div>
+    </section>
 
     <section class="newsletter-section">
       <div class="container-lg">
