--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622664909-->
+<!--timestamp=1622665424-->
 
 <head>
   <meta charset="UTF-8">
@@ -184,7 +184,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Getting-Started-with-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew/dp/1785284126">
+                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew/dp/1785284126?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=1868d51a5e89e3a1d38326b8250f9f27&amp;camp=1638&amp;creative=6742">
                   <span>
                     Getting Started with MariaDB
                   </span>
@@ -198,7 +198,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Crash-Course.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Ben-Forta/dp/0321799941">
+                <a target="_blank" href="https://www.amazon.de/-/en/Ben-Forta/dp/0321799941?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=c8822821ba63e297c11cfaed1ae6fd60&amp;camp=1638&amp;creative=6742">
                   <span>
                     MariaDB Crash Course
                   </span>
@@ -212,7 +212,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Learning-MySQL-and-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Russell-J-T-Dyer/dp/1449362907">
+                <a target="_blank" href="https://www.amazon.de/-/en/Russell-J-T-Dyer/dp/1449362907?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=33dd32c8e643cd7648ad04aa25b5d687&amp;camp=1638&amp;creative=6742">
                   <span>
                     Learning MySQL and MariaDB
                   </span>
@@ -226,7 +226,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Essentials.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Emilien-Kenler/dp/1783982861">
+                <a target="_blank" href="https://www.amazon.de/-/en/Emilien-Kenler/dp/1783982861?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=7002c756da29a5d7fcc0afcdc350dc93&amp;camp=1638&amp;creative=6742">
                   <span>
                     MariaDB Essentials
                   </span>
@@ -240,7 +240,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-Mastering-MariaDB.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Federico-Razzoli-ebook/dp/B00NW474Y6">
+                <a target="_blank" href="https://www.amazon.de/-/en/Federico-Razzoli-ebook/dp/B00NW474Y6?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=37f80db733af3697c961f367455b4f3e&amp;camp=1638&amp;creative=6742">
                   <span>
                     Mastering MariaDB
                   </span>
@@ -254,7 +254,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/book-MariaDB-Cookbook.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew-ebook/dp/B00J5KHL80">
+                <a target="_blank" href="https://www.amazon.de/-/en/Daniel-Bartholomew-ebook/dp/B00J5KHL80?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=5df2287650105299cbee404e1c98fa48&amp;camp=1638&amp;creative=6742">
                   <span>
                     MariaDB Cookbook
                   </span>
