--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1623009996-->
+<!--timestamp=1623010275-->
 
 <head>
   <meta charset="UTF-8">
@@ -101,7 +101,7 @@
         <div class="row">
           <div class="col-lg-8">
             <h3 id="highlightTextDescription1">
-              MariaDB 10.6 got status 'Alpha' on 26th April 2021
+              MariaDB 10.6 got status 'Alpha' <span class="highlightFoundedText">on 26th April 2021</span>
             </h3>
           </div>
           <div class="col-lg-8">
