--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1633567008-->
+<!--timestamp=1639780118-->
 
 <head>
   <meta charset="UTF-8">
@@ -10,24 +10,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
   <title>
-    Is MariaDB 10.6 Released?
+    Is MariaDB 10.7 Released?
   </title>
   <link rel="icon" href="https://released.info/assets/img/technologies/mariadb/mariadb.ico" type="image/svg+xml">
-  <meta name="description" content="Is MariaDB 10.6 Released?">
+  <meta name="description" content="Is MariaDB 10.7 Released?">
   <meta name="keywords" content="MariaDB, DB, database, sql">
   <meta name=”robots” content="index, follow">
 
   <!-- facebook -->
   <meta property="og:url" content="https://is.mariadb.released.info" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Is MariaDB 10.6 Released?" />
+  <meta property="og:title" content="Is MariaDB 10.7 Released?" />
   <meta property="og:description" content="There is no information about MariaDB 10.7 release! Still waiting! #released.info" />
   <meta property="og:image" content="https://released.info/assets/img/technologies/mariadb/mariadb-logo.png" />
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="ReleasedInfo" />
-  <meta name="twitter:title" content="Is MariaDB 10.6 Released?" />
+  <meta name="twitter:title" content="Is MariaDB 10.7 Released?" />
   <meta name="twitter:description" content="There is no information about MariaDB 10.7 release! Still waiting! #released.info" />
   <meta name="twitter:image" content="https://released.info/assets/img/technologies/mariadb/mariadb-logo.png" />
 
@@ -70,7 +70,7 @@
           </li>
         </ul>
         <h2>
-          Is MariaDB 10.6 Released?
+          Is MariaDB 10.7 Released?
         </h2>
         <div class="row">
           <div class="col-lg-8">
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="col-lg-8">
             <h3 id="highlightTextDescription1">
-              MariaDB 10.7 got status 'Alpha' <span class="btn-primary">on 26th April 2021</span>
+              MariaDB 10.7 got status 'Release Candidate' <span class="btn-primary">on 08th November 2021</span>
             </h3>
           </div>
           <div class="col-lg-8">
@@ -127,19 +127,19 @@
 
             <ul>
               <li>
-                Atomic DDL
+                Automatic provisioning of slave
               </li>
             </ul>
 
             <ul>
               <li>
-                System versioning setting to allow history modification
+                Support for GTID in mysqlbinlog
               </li>
             </ul>
 
             <ul>
               <li>
-                Refine the server binlog-based recovery for semisync
+                Implement descending index: KEY (a DESC, b ASC)
               </li>
             </ul>
 
@@ -147,23 +147,23 @@
           <div class="col-md-5">
             <ul>
               <li>
-                Engine transaction recovery through persistent binlog
+                Complete cost-based optimization for ORDER BY with LIMIT
               </li>
             </ul>
             <ul>
               <li>
-                Avoid OOM by linux kernel co-operative memory management
+                Add support for LATERAL keyword
               </li>
             </ul>
             <ul>
               <li>
-                Implement a CHECKSUM redo log record for improved validation
+                Add foreign keys support for partitioned tables
               </li>
             </ul>
           </div>
         </div>
         <div class="text-center">
-          <a target="_blank" href="https://jira.mariadb.org/browse/MDEV-18976?jql=project%20%3D%20MDEV%20AND%20issuetype%20%3D%20Task%20AND%20fixVersion%20in%20(10.6)%20ORDER%20BY%20votes%20DESC%2C%20priority%20DESC" class="btn btn-primary btn-lg">Read more</a>
+          <a target="_blank" href="https://jira.mariadb.org/browse/MDEV-7502?jql=project%20%3D%20MDEV%20AND%20issuetype%20%3D%20Task%20AND%20fixVersion%20%3D%2010.7%20ORDER%20BY%20votes%20DESC%2C%20priority%20DESC" class="btn btn-primary btn-lg">Read more</a>
         </div>
       </div>
       <div class="logo-container">
