--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1646036151-->
+<!--timestamp=1647276850-->
 
 <head>
   <meta charset="UTF-8">
@@ -10,25 +10,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
   <title>
-    Is MariaDB 10.7 Released?
+    Is MariaDB 10.9 Released?
   </title>
   <link rel="icon" href="https://released.info/assets/img/technologies/mariadb/mariadb.ico" type="image/svg+xml">
-  <meta name="description" content="Is MariaDB 10.7 Released?">
+  <meta name="description" content="Is MariaDB 10.9 Released?">
   <meta name="keywords" content="MariaDB, DB, database, sql">
   <meta name=”robots” content="index, follow">
 
   <!-- facebook -->
   <meta property="og:url" content="https://is.mariadb.released.info" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Is MariaDB 10.7 Released?" />
-  <meta property="og:description" content="There is no information about MariaDB 10.7 release! Still waiting! #released.info" />
+  <meta property="og:title" content="Is MariaDB 10.9 Released?" />
+  <meta property="og:description" content="There is no information about MariaDB 10.9 release! Still waiting! #released.info" />
   <meta property="og:image" content="https://released.info/assets/img/technologies/mariadb/mariadb-logo.png" />
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="ReleasedInfo" />
-  <meta name="twitter:title" content="Is MariaDB 10.7 Released?" />
-  <meta name="twitter:description" content="There is no information about MariaDB 10.7 release! Still waiting! #released.info" />
+  <meta name="twitter:title" content="Is MariaDB 10.9 Released?" />
+  <meta name="twitter:description" content="There is no information about MariaDB 10.9 release! Still waiting! #released.info" />
   <meta name="twitter:image" content="https://released.info/assets/img/technologies/mariadb/mariadb-logo.png" />
 
   <meta name="url" content="https://is.mariadb.released.info" />
@@ -70,7 +70,7 @@
           </li>
         </ul>
         <h2>
-          Is MariaDB 10.7 Released?
+          Is MariaDB 10.9 Released?
         </h2>
         <div class="row">
           <div class="col-lg-8">
@@ -99,14 +99,10 @@
         <div class="row">
           <div class="col-lg-8">
             <h3 id="highlightTextDescription1">
-              MariaDB 10.7 got status 'Release Candidate' <span class="btn-primary">on 08th November 2021</span>
+              There is <span class="btn-primary">no clear information</span> about release of MariaDB 10.9
             </h3>
           </div>
-          <div class="col-lg-8">
-            <h4 id="highlightTextDescription2">
-              There is no information when it will be released.
-            </h4>
-          </div>
+          
         </div>
         <div class="text-center">
           <a class="share-twitter" target="_blank">
@@ -120,26 +116,26 @@
     <section class="features-section">
       <div class="container-lg">
         <h2>
-          Meet Maria 10.7
+          Meet Maria 10.9
         </h2>
         <div class="row mb-5">
           <div class="col-md-5">
 
             <ul>
               <li>
-                Automatic provisioning of slave
+                JSON_OVERLAPS
               </li>
             </ul>
 
             <ul>
               <li>
-                Support for GTID in mysqlbinlog
+                innodb_change_buffering deprecated
               </li>
             </ul>
 
             <ul>
               <li>
-                Implement descending index: KEY (a DESC, b ASC)
+                Add support for LATERAL keyword
               </li>
             </ul>
 
@@ -147,12 +143,7 @@
           <div class="col-md-5">
             <ul>
               <li>
-                Complete cost-based optimization for ORDER BY with LIMIT
-              </li>
-            </ul>
-            <ul>
-              <li>
-                Add support for LATERAL keyword
+                old (replaced by old_mode)
               </li>
             </ul>
             <ul>
@@ -160,10 +151,15 @@
                 Add foreign keys support for partitioned tables
               </li>
             </ul>
+            <ul>
+              <li>
+                ALTER ONLINE TABLE
+              </li>
+            </ul>
           </div>
         </div>
         <div class="text-center">
-          <a target="_blank" href="https://jira.mariadb.org/browse/MDEV-7502?jql=project%20%3D%20MDEV%20AND%20issuetype%20%3D%20Task%20AND%20fixVersion%20%3D%2010.7%20ORDER%20BY%20votes%20DESC%2C%20priority%20DESC" class="btn btn-primary btn-lg">Read more</a>
+          <a target="_blank" href="https://jira.mariadb.org/browse/MDEV-16329?jql=project%20%3D%20MDEV%20AND%20issuetype%20%3D%20Task%20AND%20fixVersion%20in%20(10.9%2C%2010.9.0)%20ORDER%20BY%20votes%20DESC%2C%20priority%20DESC" class="btn btn-primary btn-lg">Read more</a>
         </div>
       </div>
       <div class="logo-container">
