--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1671754592-->
+<!--timestamp=1671816348-->
 
 <head>
   <meta charset="UTF-8">
@@ -123,19 +123,13 @@
 
             <ul>
               <li>
-                JSON_OVERLAPS
+                Security Vulnerabilities Fixed
               </li>
             </ul>
 
             <ul>
               <li>
-                innodb_change_buffering deprecated
-              </li>
-            </ul>
-
-            <ul>
-              <li>
-                Add support for LATERAL keyword
+                The Optimizer Cost Model
               </li>
             </ul>
 
@@ -143,23 +137,13 @@
           <div class="col-md-5">
             <ul>
               <li>
-                old (replaced by old_mode)
-              </li>
-            </ul>
-            <ul>
-              <li>
-                Add foreign keys support for partitioned tables
-              </li>
-            </ul>
-            <ul>
-              <li>
-                ALTER ONLINE TABLE
+                OPTIMIZER_SCAN_SETUP_COST
               </li>
             </ul>
           </div>
         </div>
         <div class="text-center">
-          <a target="_blank" href="https://jira.mariadb.org/browse/MDEV-16329?jql=project%20%3D%20MDEV%20AND%20issuetype%20%3D%20Task%20AND%20fixVersion%20in%20(10.10%2C%2010.10.0)%20ORDER%20BY%20votes%20DESC%2C%20priority%20DESC" class="btn btn-primary btn-lg">Read more</a>
+          <a target="_blank" href="https://mariadb.com/kb/en/changes-and-improvements-in-mariadb-11-0/" class="btn btn-primary btn-lg">Read more</a>
         </div>
       </div>
       <div class="logo-container">
