--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1671818204-->
+<!--timestamp=1671960895-->
 
 <head>
   <meta charset="UTF-8">
@@ -282,7 +282,11 @@
     <section class="about-section">
       <div class="container-lg">
         <div>
-    <h2>About MariaDB</h2>
+    <h1>Version</h1>
+    You can check the version of MariaDB you're using by running the following command in the MySQL client:
+    <pre>SHOW VARIABLES LIKE 'version';</pre>
+    This will return a single row with two columns, Variable_name and Value. The value column will contain the version
+    <h1>About MariaDB</h1>
     MariaDB is developed by Michael Widenius, the same developer of MySQL, the first release was made available to the
     public
     in October 2009. Maria DB is an authorized fork of MySQL, which stands for “structured query language”.
