--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1714608985-->
+<!--timestamp=1738271482-->
 
 <head>
   <meta charset="UTF-8">
@@ -115,7 +115,50 @@
       </div>
     </section>
 
-    
+    <section class="features-section">
+      <div class="container-lg">
+        <h2>
+          Meet Maria 12
+        </h2>
+        <div class="row mb-5">
+          <div class="col-md-5">
+
+            <ul>
+              <li>
+                Parallel Replication Enhancements
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                UUID Generation Functions
+              </li>
+            </ul>
+
+          </div>
+          <div class="col-md-5">
+            <ul>
+              <li>
+                ROW Data Type
+              </li>
+            </ul>
+            <ul>
+              <li>
+                New GIS Functions
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="text-center">
+          <a target="_blank" href="https://mariadb.org/blog/" class="btn btn-primary btn-lg">Read more</a>
+        </div>
+      </div>
+      <div class="logo-container">
+        <span role="img" aria-label="${configuration.logoAlt2}"
+          style="background-image: url(&#39;https://released.info/assets/img/technologies/mariadb/mariadb-logo2.png&#39;);">
+        </span>
+      </div>
+    </section>
 
     <section class="posts-section">
       <div class="container-lg">
